# inference-server

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  inference-server.yaml.example  pyproject.toml  server_config.yaml  summary.md  todo
.claude/commands/: new-experiment.md
benchmarks/: benchmark_config.yaml  experiment_orchestrator.py  experiments.md  run_dispatchers.py  run_experiment.py
benchmarks/dispatchers/: __init__.py  base.py  concurrent.py  realistic.py  sequential.py
benchmarks/experiments/: latency_composition.yaml  (+1 more)
control-plane/: autoscaler.py
control_plane/: admission_controller.py
docker/: alerting-rules.yml  controller.dockerfile  gateway.dockerfile  inference.dockerfile  prometheus.yml  sidecar.dockerfile
docs/: backlog.md  benchmark_report.md  features.md  flow.md  infra.md  l1_cache.md  plan.md  plan_benchmarking.md  plan_robustness.md  plan_scaling.md  plan_vllm_replace.md  requirements-and-decisions.md  roadmap.md  roadmap_portfolio.md  scaling_plan.md  what-you-can-do-by-phase.md
experiments/: generate_prompts.py  prompts.json  protocol.md  requirements.md  results_apc.json  results_lmcache.json  run_benchmark.py  start_lmcache.sh
manifests/: 01-rbac.yaml  02-crd-lora-adapter.yaml  05-inference-service-deploy.yaml
scripts/: benchmark.py  quick_inference.py  stream_test.py
shared/: config.py  config_loader.py  errors.py  logging_config.py  middleware.py  openai_types.py  ports.py  preflight.py  rate_limiter.py  resilience.py  tracing.py  types.py
src/: main.py
tests/: conftest.py
(+115 files in other folders)
